--- a/q_Q_explosion_analysis/q_Q_explosion_analysis.ipynb
+++ b/q_Q_explosion_analysis/q_Q_explosion_analysis.ipynb
@@ -5194,7 +5194,23 @@
    "id": "7a32d31b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# FOR DIFFERENT NOTEBOOK - COMPARISON BETWEEN METHODS\n",
+    "\n",
+    "# # NLL method (no quantile)\n",
+    "# cal_nll = NLLGD_Calibrator(initial_model=patient_1_model, eta_Q=1e-2, clip_grad=1.0, ema_beta=0.9)\n",
+    "# model_nll = cal_nll.calibrate_model(masked_observations, actions)\n",
+    "# print(\"NLLGD metrics:\", cal_nll.get_metrics())\n",
+    "\n",
+    "# # Your B-CUC variants already return the same keys via get_metrics()\n",
+    "# cal_bcuc_qc = BCUC_Calibrator(patient_1_model, mode=\"quantile_coupled\")\n",
+    "# cal_bcuc_qc.calibrate_model(masked_observations, actions)\n",
+    "# print(\"BCUC (quantile_coupled):\", cal_bcuc_qc.get_metrics())\n",
+    "\n",
+    "# cal_bcuc_qf = BCUC_Calibrator(patient_1_model, mode=\"quantile_free\")\n",
+    "# cal_bcuc_qf.calibrate_model(masked_observations, actions)\n",
+    "# print(\"BCUC (quantile_free):\", cal_bcuc_qf.get_metrics())"
+   ]
   }
  ],
  "metadata": {
