--- a/final_algoritm/performance.ipynb
+++ b/final_algoritm/performance.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6daf76b9",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "62572556",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "acc4dcff",
    "metadata": {},
    "outputs": [],
@@ -45,8 +45,7 @@
     "from models.model_utils import mask_observations, params\n",
     "from models.linear_model import LinearModel_Estimator\n",
     "from calibrator_module.BCUC_calibrator_finalVersion import BCUC_Calibrator\n",
-    "from models.model_utils import params\n",
-    "from calibrator_module.NLL_gradient_descent_calibrator import NLLGD_Calibrator\n"
+    "from models.model_utils import params\n"
    ]
   },
   {
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "607d817c",
    "metadata": {},
    "outputs": [
@@ -169,97 +168,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "0476d5f9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[BCUC quantile_coupled]\n",
-      "metrics: {'E_bar': 0.31879677605066203, 'coverage': 0.681203223949338, 'mean_interval_width': 0.6806743256752487, 'avg_nll': 0.2276099170657401}\n",
-      "final Q: [[0.8915074]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# --- plot results ---\n",
-    "metrics_qc = cal_qc.get_metrics()\n",
-    "print(\"\\n[BCUC quantile_coupled]\")\n",
-    "print(\"metrics:\", metrics_qc)\n",
-    "print(\"final Q:\", model_qc.Q)\n",
-    "\n",
-    "# metrics_qf = cal_qf.get_metrics()\n",
-    "# print(\"\\n[BCUC quantile_free]\")\n",
-    "# print(\"metrics:\", metrics_qf)\n",
-    "# print(\"final Q:\", model_qf.Q)\n",
-    "\n",
-    "# metrics_nll = cal_nll.get_metrics()\n",
-    "# print(\"\\n[NLLGD baseline]\")\n",
-    "# print(\"metrics:\", metrics_nll)\n",
-    "# print(\"final Q:\", model_nll.Q)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebb8de53",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['observations'].size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "9a07dba5",
    "metadata": {},
    "outputs": [],
    "source": [
     "Q_vals_qc = [cal_qc.Q_history for cal_qc in calibrators]\n",
-    "# Q_vals_qf = cal_qf.Q_history\n",
-    "# Q_vals_nll = cal_nll.Q_history\n",
     "\n",
     "q_vals_qc = [cal_qc.q_history for cal_qc in calibrators]\n",
-    "# q_vals_qf = cal_qf.q_history #should be 1 always - just for sanity check\n",
     "\n",
     "interval_widths_qc = [cal_qc.interval_widths for cal_qc in calibrators]\n",
-    "# interval_widths_qf = cal_qf.interval_widths\n",
-    "# interval_widths_nll = cal_nll.interval_widths\n",
     "\n",
     "E_qc = [cal_qc.conformal_p_control.E for cal_qc in calibrators]\n",
-    "# E_qf = cal_qf.conformal_p_control.E\n",
-    "# E_null = [1 - h for h in cal_nll.coverage_hits]\n",
     "\n",
     "interval_widths_with_correction_qc = [[val*q for val, q in zip(interval_widths_qc_p, q_vals_qc_p)] for interval_widths_qc_p, q_vals_qc_p in zip(interval_widths_qc, q_vals_qc)]\n",
     "sigma_qc = [[std/2 for std in interval_widths_with_correction_qc_p] for interval_widths_with_correction_qc_p in interval_widths_with_correction_qc] #this is the vlaues of the std but calculated right after the prediction \n",
-    "#step (without the update step in case of observation available)\n",
-    "# #it is necessary to follow this value to evaluate our calibration mechanism (we can check the interval width and cover precision)\n",
-    "# sigma_qf = [std/2 for std in interval_widths_qf]\n",
-    "# sigma_null = [std/2 for std in interval_widths_nll]\n",
+    "\n",
     "\n",
     "meu_qc = [[dictionary['mean'].flatten() for dictionary in model_qc.dist_estimates] for model_qc in calibrated_models]\n",
     "std_qc = [[np.sqrt(dictionary['var'].flatten()) for dictionary in model_qc.dist_estimates] for model_qc in calibrated_models]\n",
     "meu_qc = [np.array(meu).squeeze() for meu in meu_qc]\n",
-    "std_qc = [np.array(std).squeeze() for std in std_qc]\n",
-    "\n",
-    "# meu_qf = [dictionary['mean'].flatten() for dictionary in model_qf.dist_estimates]\n",
-    "# std_qf = [np.sqrt(dictionary['var'].flatten()) for dictionary in model_qf.dist_estimates]\n",
-    "# meu_qf = np.array(meu_qf[1:]).squeeze()   \n",
-    "# std_qf = np.array(std_qf[1:]).squeeze()\n",
-    "\n",
-    "# meu_nll = [dictionary['mean'].flatten() for dictionary in model_nll.dist_estimates]\n",
-    "# std_nll = [np.sqrt(dictionary['var'].flatten()) for dictionary in model_nll.dist_estimates]\n",
-    "# meu_nll = np.array(meu_nll[1:]).squeeze()   \n",
-    "# std_nll = np.array(std_nll[1:]).squeeze()"
+    "std_qc = [np.array(std).squeeze() for std in std_qc]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "8c01c481",
    "metadata": {},
    "outputs": [],
@@ -278,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "id": "0407f7e6",
    "metadata": {},
    "outputs": [
@@ -319,28 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "429e5399",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(interval_widths_with_correction_qc, label=\"Prediction Interval Width - BCUC quantile_coupled\", color='blue', linewidth=2)\n",
-    "plt.xlabel(\"Time Step\")\n",
-    "plt.ylabel(\"Width\")\n",
-    "plt.title(\"Prediction Interval Width Over Time\")\n",
-    "plt.grid(True)\n",
-    "plt.legend()\n",
-    "plt.tight_layout()\n",
-    "fig_name = \"plot_interval_width.png\"\n",
-    "full_path = os.path.join(dir_name, fig_name)\n",
-    "plt.savefig(full_path, dpi=300, bbox_inches='tight')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "50af626e",
    "metadata": {},
    "outputs": [
@@ -373,166 +286,6 @@
     "fig.tight_layout()\n",
     "fig.savefig(os.path.join(dir_name, \"q_t.png\"), dpi=300, bbox_inches='tight')\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17f7dbc0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 5))\n",
-    "time_steps = range(len(E_qc[600:]))  # or your actual time step data\n",
-    "plt.scatter(time_steps, E_qc[600:], label=\"coverage error\")\n",
-    "# plt.yscale(\"log\")\n",
-    "plt.xlabel(\"Time Step\")\n",
-    "plt.ylabel(\"Value\")\n",
-    "plt.title(\"Binary Coverage Errors Over Time\")\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "plt.tight_layout()\n",
-    "fig_name = \"E_t.png\"\n",
-    "full_path = os.path.join(dir_name, fig_name)\n",
-    "plt.savefig(full_path, dpi=300)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09b3410c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 5))\n",
-    "time_steps = range(len(E))  # or your actual time step data\n",
-    "plt.scatter(E, Q_vals, label=\"coverage error\")\n",
-    "# plt.yscale(\"log\")\n",
-    "plt.xlabel(\"E_bar\")\n",
-    "plt.ylabel(\"Q_t\")\n",
-    "plt.title(\"Binary Coverage Errors Over Time\")\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e67cbf9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sigma = np.array(sigma).flatten()\n",
-    "sigma"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce866762",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 5))\n",
-    "ts = np.arange(len(meu)) \n",
-    "plt.plot(ts, meu, label=\" meu\")\n",
-    "# plt.fill_between(ts, meu- std, meu + std, alpha=0.2, label=\"Confidence Interval\")\n",
-    "# plt.yscale(\"log\")\n",
-    "plt.xlabel(\"Time Step\")\n",
-    "plt.ylabel(\"Value\")\n",
-    "plt.title(\"Mean and Standard Deviation Over Time vs Observations\")\n",
-    "plt.grid(True)\n",
-    "plt.tight_layout()\n",
-    "plt.savefig(\"calibrated_distribution_over_time_vs_observation.png\", dpi=300)\n",
-    "plt.fill_between(ts, meu - sigma, meu + sigma, alpha=0.2, label=\"Confidence Interval\")\n",
-    "ts_new = np.arange(np.size(masked_observations))\n",
-    "# mask = ~np.isnan(masked_observations)\n",
-    "# ts_valid = ts_new[mask.flatten()]\n",
-    "# obs_valid = masked_observations[mask.flatten()]\n",
-    "# plt.scatter(ts_valid, obs_valid, color='red', label='Observations')\n",
-    "obs = data['observations']\n",
-    "plt.scatter(ts_new, obs, color='red', label='Observations')\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0768272b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask = ~np.isnan(masked_observations)\n",
-    "obs_valid = masked_observations[mask.flatten()]\n",
-    "obs_valid.size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf057b81",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ea0bcc2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.scatter(ts_new, within_band, color='red', label='Observations')\n",
-    "plt.show()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96072ef8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "within_band.size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "132b6452",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.arange(np.size(masked_observations))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a32d31b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# FOR DIFFERENT NOTEBOOK - COMPARISON BETWEEN METHODS\n",
-    "\n",
-    "# # NLL method (no quantile)\n",
-    "# cal_nll = NLLGD_Calibrator(initial_model=patient_1_model, eta_Q=1e-2, clip_grad=1.0, ema_beta=0.9)\n",
-    "# model_nll = cal_nll.calibrate_model(masked_observations, actions)\n",
-    "# print(\"NLLGD metrics:\", cal_nll.get_metrics())\n",
-    "\n",
-    "# # Your B-CUC variants already return the same keys via get_metrics()\n",
-    "# cal_bcuc_qc = BCUC_Calibrator(patient_1_model, mode=\"quantile_coupled\")\n",
-    "# cal_bcuc_qc.calibrate_model(masked_observations, actions)\n",
-    "# print(\"BCUC (quantile_coupled):\", cal_bcuc_qc.get_metrics())\n",
-    "\n",
-    "# cal_bcuc_qf = BCUC_Calibrator(patient_1_model, mode=\"quantile_free\")\n",
-    "# cal_bcuc_qf.calibrate_model(masked_observations, actions)\n",
-    "# print(\"BCUC (quantile_free):\", cal_bcuc_qf.get_metrics())"
    ]
   }
  ],
