--- a/final_algoritm/Comparison/Comparison.ipynb
+++ b/final_algoritm/Comparison/Comparison.ipynb
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "9a07dba5",
    "metadata": {},
    "outputs": [],
@@ -405,39 +405,7 @@
     "Q_vals_nll= [cal.Q_history for cal in calibrators_nll]\n",
     "\n",
     "q_vals_BCUC = [cal.q_history for cal in calibrators_BCUC]\n",
-    "q_vals_conformal = [cal.q_history for cal in calibrators_conformalPred]\n",
-    "# q_vals_qf = cal_qf.q_history #should be 1 always - just for sanity check\n",
-    "\n",
-    "# interval_widths_BCUC = [cal.interval_widths for cal in calibrators_BCUC]\n",
-    "# interval_widths_conformal = [cal.interval_widths for cal in calibrated_models_conformalPred]\n",
-    "\n",
-    "# # E = [cal.conformal_p_control.E for cal in calibrators]\n",
-    "# # E.append(calibrators[-1].E)\n",
-    "# # # E_qf = cal_qf.conformal_p_control.E\n",
-    "# # # E_null = [1 - h for h in cal_nll.coverage_hits]\n",
-    "\n",
-    "# interval_widths_with_correction_BCUC = [val*q for val, q in zip(interval_widths_BCUC, q_vals_BCUC)]\n",
-    "# interval_widths_with_correction_conformal = [val*q for val, q in zip(interval_widths_conformal, q_vals_conformal)]\n",
-    "# sigma_BCUC = [[std/2 for std in interval_widths_with_correction_BCUC_p] for interval_widths_with_correction_BCUC_p in interval_widths_with_correction_BCUC] #this is the vlaues of the std but calculated right after the prediction \n",
-    "# # #step (without the update step in case of observation available)\n",
-    "# # #it is necessary to follow this value to evaluate our calibration mechanism (we can check the interval width and cover precision)\n",
-    "# # sigma_qf = [std/2 for std in interval_widths_qf]\n",
-    "# # sigma_null = [std/2 for std in interval_widths_nll]\n",
-    "\n",
-    "# meu = [[dictionary['mean'].flatten() for dictionary in model.dist_estimates] for model in calibrated_models]\n",
-    "# std = [[np.sqrt(dictionary['var'].flatten()) for dictionary in model.dist_estimates] for model in calibrated_models]\n",
-    "# meu = [np.array(meu).squeeze() for meu in meu]\n",
-    "# std = [np.array(std).squeeze() for std in std]\n",
-    "\n",
-    "# meu_qf = [dictionary['mean'].flatten() for dictionary in model_qf.dist_estimates]\n",
-    "# std_qf = [np.sqrt(dictionary['var'].flatten()) for dictionary in model_qf.dist_estimates]\n",
-    "# meu_qf = np.array(meu_qf[1:]).squeeze()   \n",
-    "# std_qf = np.array(std_qf[1:]).squeeze()\n",
-    "\n",
-    "# meu_nll = [dictionary['mean'].flatten() for dictionary in model_nll.dist_estimates]\n",
-    "# std_nll = [np.sqrt(dictionary['var'].flatten()) for dictionary in model_nll.dist_estimates]\n",
-    "# meu_nll = np.array(meu_nll[1:]).squeeze()   \n",
-    "# std_nll = np.array(std_nll[1:]).squeeze()"
+    "q_vals_conformal = [cal.q_history for cal in calibrators_conformalPred]\n"
    ]
   },
   {
