--- a/final_algoritm/Comparison/Comparison.ipynb
+++ b/final_algoritm/Comparison/Comparison.ipynb
@@ -5,9 +5,39 @@
    "id": "a4acb499",
    "metadata": {},
    "source": [
-    "# Comparison Between Methods\n",
+    "## Comparison Between Methods\n",
     "\n",
-    "### In this notebook, \n"
+    "We compare three approaches for updating the process noise parameter \\( Q \\):\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**1. BCUC (ours)** – Based on quantile coupling, inspired by CUQDS:  \n",
+    "\n",
+    "The quantile $q$ is updated using a proportional–control (P-controller) rule:  \n",
+    "$q_{\\text{new}} = q + \\eta \\, (\\bar{E} - \\alpha)$  \n",
+    "\n",
+    "Then, $Q$ is updated via:  \n",
+    "$Q \\leftarrow q^2 \\, Q$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**2. Conformal Prediction style** – The quantile $q$ is computed as the empirical quantile of the maintained scores:  \n",
+    "$\n",
+    "q \\leftarrow \\mathrm{Quantile}(\\{\\text{scores}\\}, \\, 1 - \\alpha)\n",
+    "$  \n",
+    "\n",
+    "Then, $Q$ is updated using the same formula as in method 1:  \n",
+    "$\n",
+    "Q \\leftarrow q^2 \\, Q\n",
+    "$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**3. NLL-gradient based** – $Q$ is updated directly by taking a gradient step on the negative log-likelihood (NLL):  \n",
+    "\n",
+    "$Q \\leftarrow Q - \\eta \\, \\frac{\\partial \\,\\mathrm{NLL}}{\\partial Q}$\n",
+    "\n",
+    "---\n"
    ]
   },
   {
@@ -46,8 +76,6 @@
     "from models.linear_model import LinearModel_Estimator\n",
     "from calibrator_module.BCUC_calibrator_finalVersion import BCUC_Calibrator\n",
     "from models.model_utils import params\n",
-    "from calibrator_module.nll_threshold_calibrator import NLLThresholdCalibrator\n",
-    "from calibrator_module.direct_Q_calibrator import DirectQCalibrator\n",
     "from calibrator_module.NLL_gradient_descent_calibrator import NLLBasedQCalibrator\n",
     "from calibrator_module.conformal_prediction_classic import conformalPrediction_Calibrator"
    ]
