--- a/q_Q_explosion_analysis/q_Q_explosion_analysis.ipynb
+++ b/q_Q_explosion_analysis/q_Q_explosion_analysis.ipynb
@@ -3583,7 +3583,7 @@
    ],
    "source": [
     "#load \n",
-    "data = np.load(\"../observations/q_Q_explosion/first_person/observations_random_zeros_and_actions_for_Q0.0001_initialModel_0.0001.npz\")\n",
+    "data = np.load(\"../observations/first_person/observations_random_zeros_and_actions_for_Q0.0001_initialModel_0.0001.npz\")\n",
     "masked_observations = mask_observations(data['observations'])\n",
     "actions = data['actions']\n",
     "\n",
@@ -3594,39 +3594,7 @@
     "patient_1_calibrated = calibrator.calibrate_model(masked_observations, actions)\n",
     "boolFlag = patient_1_model is patient_1_calibrated\n",
     "\n",
-    "print(f\"calibrated Q :{patient_1_calibrated.Q}\")\n",
-    "\n",
-    "\n",
-    "# ----------------------------\n",
-    "\n",
-    "# # Quantile-coupled B-CUC\n",
-    "# calib_qc = BCUC_Calibrator(initial_model, mode=\"quantile_coupled\")\n",
-    "# model_qc = calib_qc.calibrate_model(obs, actions)\n",
-    "\n",
-    "# # Quantile-free Q controller (ablation)\n",
-    "# calib_qf = BCUC_Calibrator(initial_model, mode=\"quantile_free\")\n",
-    "# model_qf = calib_qf.calibrate_model(obs, actions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "id": "ebb8de53",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1001"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['observations'].size"
+    "print(f\"calibrated Q :{patient_1_calibrated.Q}\")\n"
    ]
   },
   {
