--- a/q_Q_explosion_analysis/q_Q_explosion_analysis.ipynb
+++ b/q_Q_explosion_analysis/q_Q_explosion_analysis.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "62572556",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "acc4dcff",
    "metadata": {},
    "outputs": [],
@@ -53,13 +53,13 @@
     "import matplotlib.pyplot as plt\n",
     "from models.model_utils import mask_observations, params\n",
     "from models.linear_model import LinearModel_Estimator\n",
-    "from calibrator_module.BCUC_calibrator import BCUC_Calibrator\n",
+    "from calibrator_module.modules_that_didnt_workout.BCUC_calibrator import BCUC_Calibrator\n",
     "from models.model_utils import params\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 13,
    "id": "7ccb5999",
    "metadata": {},
    "outputs": [
@@ -73,10 +73,10 @@
       "Generating observations for random_zeros_and_actions actions...\n",
       "Generated 1001 observations\n",
       "Observation shape: (1,)\n",
-      "Data saved as ../observations/q_Q_explosion/first_person/observations_random_zeros_and_actions_for_Q0.0001_initialModel_0.0001.npz\n",
-      "Model parameters saved as ../observations/q_Q_explosion/first_person/observations_random_zeros_and_actions_for_Q0.0001_initialModel_0.0001_params.json\n",
-      "Observation mean: [4.22339592]\n",
-      "Observation std: [1.79802198]\n",
+      "Data saved as ../observations/observations_random_zeros_and_actions_for_Q0.0001_steps_1000.npz\n",
+      "Model parameters saved as ../observations/observations_random_zeros_and_actions_for_Q0.0001_steps_1000_params.json\n",
+      "Observation mean: [3.48952997]\n",
+      "Observation std: [2.02479217]\n",
       "Observation generation complete!\n",
       "\n",
       "Recommended workflow:\n",
@@ -89,7 +89,7 @@
    ],
    "source": [
     "\n",
-    "!python ../observation_generation.py --dir_path \"../observations/q_Q_explosion/first_person\" --format npz --initial_Q 0.0001\n"
+    "!python ../observation_generation.py --dir_path \"../observations\" --format npz --n_steps 1000"
    ]
   },
   {
@@ -3753,53 +3753,6 @@
     "fig_name = \"q_t.png\"\n",
     "full_path = os.path.join(dir_name, fig_name)\n",
     "plt.savefig(full_path, dpi=300, bbox_inches='tight')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "id": "d0ea5df8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from copy import deepcopy\n",
-    "q_vals_0 = deepcopy(q_vals)\n",
-    "Q_t_0 = deepcopy(Q_vals)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dccf8560",
-   "metadata": {},
-   "source": [
-    "### Comparison Between different initial q"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cdf51fc9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(np.arange(len(q_vals_0)), q_vals_0,  label=\"q_t, initial q = 2.0\")\n",
-    "plt.plot(np.arange(len(q_vals_1)), q_vals_1,  label=\"q_t, initial q = 1.0\")\n",
-    "plt.plot(np.arange(len(q_vals_2)), q_vals_2,  label=\"q_t, initial q = 0.0\")\n",
-    "plt.plot(np.arange(len(q_vals_3)), q_vals_3,  label=\"q_t, initial q = 5.0\")\n",
-    "\n",
-    "\n",
-    "# plt.yscale(\"log\")\n",
-    "plt.xlabel(\"Time Step\")\n",
-    "plt.ylabel(\"Value\")\n",
-    "plt.title(\"Comparison of q_t with Different Initial Values\")\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "plt.tight_layout()\n",
-    "fig_name = \"q_t.png\"\n",
-    "full_path = os.path.join(dir_name, fig_name)\n",
-    "plt.savefig(full_path, dpi=300)\n",
     "plt.show()"
    ]
   },
