--- a/final_algorithm/Comparison/Comparison.ipynb
+++ b/final_algorithm/Comparison/Comparison.ipynb
@@ -75,7 +75,7 @@
     "from models.model_utils import mask_observations, params\n",
     "from models.linear_model import LinearModel_Estimator\n",
     "from calibrator_module.BCUC_calibrator_finalVersion import BCUC_Calibrator\n",
-    "from models.model_utils import params\n",
+    "from models.model_utils import paramsw\n",
     "from calibrator_module.NLL_gradient_descent_calibrator import NLLBasedQCalibrator\n",
     "from calibrator_module.conformal_prediction_classic import conformalPrediction_Calibrator"
    ]
