--- a/final_algorithm/performance.ipynb
+++ b/final_algorithm/performance.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# final algorithm design\n",
     "\n",
-    "### In this notebook, \n"
+    "### In this notebook, we evaluate our final implementation of the BCUC algorithm. We test its calibration performance across different values of $Q$, each corresponding to a distinct simulated individual (i.e., each \"person\" has their own true $Q$ from which observations are generated).\n"
    ]
   },
   {
