changing name of debug_test_file

--- a/final_algorithm/Comparison/Comparison.ipynb
+++ b/final_algorithm/Comparison/Comparison.ipynb
@@ -437,6 +437,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "749cec0c",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "id": "8c01c481",
@@ -641,6 +647,44 @@
     "fig.savefig(os.path.join(dir_name, \"q_t_over_time_.png\"), dpi=300, bbox_inches='tight')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c2d1d50e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NLL = 0.5823649429247001\n",
+      "LL = -0.5823649429247001\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "mu = 0\n",
+    "var = 0.5\n",
+    "x = 0.1\n",
+    "\n",
+    "resid2 = (x - mu)**2\n",
+    "nll = 0.5 * (np.log(2 * np.pi * var) + resid2 / var)\n",
+    "ll = -nll\n",
+    "\n",
+    "print(\"NLL =\", nll)\n",
+    "print(\"LL =\", ll)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76c71736",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
